--- a/app/pages/main/home/follow-teams/filter-state/filter-state.html
+++ b/app/pages/main/home/follow-teams/filter-state/filter-state.html
@@ -3,29 +3,28 @@
 
         <ion-buttons start>
             <button (click)="dismiss()">
-                <span showWhen="ios">Cancel</span>
-                <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+                Cancel
+               <!-- <span showWhen="ios">Cancel</span>
+                <ion-icon name="md-close" showWhen="android,windows"></ion-icon>-->
             </button>
         </ion-buttons>
 
-        <ion-title>Team State</ion-title>
+        <ion-title>Event Operator</ion-title>
 
     </ion-navbar>
 
 </ion-header>
 
 <ion-content class="filter-state">
-    
-
-    <ion-list-header>Where's your team from?</ion-list-header>
+    <ion-list-header>Choose an Event Operator</ion-list-header>
     <ion-toolbar no-border-top no-border-bottom class="clear">
             <ion-searchbar [(ngModel)]="SearchKeyword" (input)="onInput($event)" (ionClear)="change()"
                  (ionCancel)="change()"></ion-searchbar>
     </ion-toolbar>
     <ion-card class="">
         <ion-list>
-            <a ion-item text-wrap *ngFor="let state of states | searchstates : SearchKeyword" (click)="goToFollowTeamsPage(state)">
-                <h2>{{state.StateName}}</h2>
+            <a ion-item text-wrap *ngFor="let eventoperator of eventoperators | searcheventoperators : SearchKeyword" (click)="goToFollowTeamsPage(eventoperator)">
+                <h2>{{eventoperator.Name}}</h2>
                 <!--<img item-left style="width: 20px;" src="../../../../wisconsin.svg">-->
             </a>
         </ion-list>
